refacting get files